[workspace]
members = [
    "node",
    "runtime",
    "runtime/generate-bags",
    "pallets/attestation-poc",
    "pallets/randomness",
    "pallets/supported-chains",
    "attestor",
    "primitives/attestor",
    "primitives/supported-chains",
    "primitives/randomness",
    "precompiles/chain-info",
    "precompiles/signature-verifier",
    "precompiles/substrate-transfer",
    "precompiles/block-prover",
    "common/*",
    "attestor_zombienet",
    "query-cli",
    "usc_audit_automation",
    "proof-gen-api-server",
]
resolver = "2"

[workspace.package]
authors = ["Gluwa Inc. Developer Support <support.dev@gluwa.com>"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/gluwa/creditcoin3-next/"
version = "3.67.0"

[workspace.dependencies]
affix = "0.1"
anyhow = { version = "1.0.68", default-features = false }
async-trait = { version = "0.1.42" }
axum = "0.8"
bip32 = { version = "0.5.1", default-features = false, features = ["bip39"] }
clap = { version = "4.5.3", features = ["derive", "env"] }
derive_more = "0.99.17"
env_logger = "0.11"
environmental = { version = "1.1.4", default-features = false }
ethereum = { version = "0.18.2", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
futures = { version = "0.3.30" }
futures-timer = { version = "3.0" }
futures-util = { version = "0.3", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
jsonrpsee = { version = "0.24.7", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4.21", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
once_cell = { version = "1.19.0" }
parity-scale-codec = { version = "3.6", default-features = false, features = [
    "derive",
] }
parking_lot = "0.12.1"
paste = "1.0.14"
primitive-types = "0.12.1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
sha3 = { version = "0.10", default-features = false }
slices = "0.2.0"
tempfile = { version = "3.10", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
tiny-bip39 = { version = "0.8", default-features = false }
tokio = { version = "1.37.0" }
tower = { version = "0.5", default-features = false }
tracing = "0.1.37"
url = { version = "2.4.0" }
wasm-timer = { version = "0.2" }
# Alloy
alloy = { version = "0.11", features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "consensus",
    "rlp",
    "contract",
    "sol-types",
    "signers",
] }

# Starknet dependencies removed - no longer needed

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
generate-bags = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-fast-unstake = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network-gossip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network-test = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network-types = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }

# Frontier Client
fc-api = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-cli = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
# Frontier Primitive
fp-account = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-ethereum = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
# Frontier FRAME
pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
pallet-hotfix-sufficients = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
# Frontier Utility
precompile-utils = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }

# Gluwa
ccnext-abi-encoding = { version = "0.3" }
ccnext-query-builder = { version = "0.5" }
creditcoin3-runtime = { path = "runtime", default-features = false }
pallet-attestation-poc = { path = "pallets/attestation-poc", default-features = false }
pallet-supported-chains = { path = "pallets/supported-chains", default-features = false }

# Precompiles
ethabi = { version = "18.0.0", default-features = false }
pallet-evm-precompile-block-prover = { path = "precompiles/block-prover", default-features = false }
pallet-evm-precompile-chain-info = { path = "precompiles/chain-info", default-features = false }
pallet-evm-precompile-signature-verifier = { path = "precompiles/signature-verifier", default-features = false }
pallet-evm-precompile-substrate-transfer = { path = "precompiles/substrate-transfer", default-features = false }

# Tracing
evm = { version = "0.42.0", default-features = false, features = ["tracing"] }
evm-gasometer = { version = "0.42.0", default-features = false, features = [
    "tracing",
] }
evm-runtime = { version = "0.42.0", default-features = false, features = [
    "tracing",
] }

creditcoin3-cli-opt = { path = "node/cli-opt", default-features = false }

# Vendor packages (Moonbeam)
creditcoin3-primitives-ext = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-primitives-ext", default-features = false }
moonbeam-client-evm-tracing = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-client-evm-tracing" }
moonbeam-evm-tracer = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-evm-tracer", default-features = false }
# Vendor rpc-core (Moonbeam)
moonbeam-rpc-core-debug = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-rpc-core-debug" }
moonbeam-rpc-core-trace = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-rpc-core-trace" }
moonbeam-rpc-core-types = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-rpc-core-types" }
# Vendor rpc (Moonbeam)
moonbeam-rpc-debug = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-rpc-debug" }
moonbeam-rpc-trace = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-rpc-trace" }
# Vendor primitives (Moonbeam)
evm-tracing-events = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "evm-tracing-events", default-features = false }
moonbeam-rpc-primitives-debug = { git = "https://github.com/gluwa/moonbeam", branch = "gluwa_stable_2409", package = "moonbeam-rpc-primitives-debug", default-features = false }

# Attestation
attestor-primitives = { path = "primitives/attestor", default-features = false }
creditcoin3-attestor-gossip = { path = "client/attestor-gossip" }
creditcoin3-attestor-rpc = { path = "client/attestor-rpc" }
supported-chains-primitives = { path = "primitives/supported-chains", default-features = false }

# Randomness
pallet-randomness = { path = "pallets/randomness", default-features = false }
randomness-primitives = { path = "primitives/randomness", default-features = false }

# Common
bls-signatures = { git = "https://github.com/gluwa/bls-signatures", default-features = false, features = [
    "pairing",
] }
cc-client = { path = "common/cc-client" }
eth = { path = "common/eth", default-features = false }
merkle = { path = "common/merkle", default-features = false }
prometheus = { path = "common/prometheus" }
utils = { path = "common/utils", default-features = false }
vrf = { path = "common/vrf", default-features = false }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
codegen-units = 1
lto = "fat"
